# xutility

./: .devcontainer.json  .gitignore  README.md  pyproject.toml
docs/: xcom.md
examples/xcom/: README.md  keep_alive_client.py  server.py  transient_client.py
tests/: test_data_container.py  test_logger.py  test_numeric.py
xutility/: __init__.py  chrono.py  coro.py  data_container.py  env.py  exception.py  logger.py  numeric.py  xcom.py
