[project]
name = "xutility"
version = "0.1.0"
description = "A miscellaneous toolkit"
authors = [{ name = "yttty", email = "yttty@users.noreply.github.com" }]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/yttty/xutility"
repository = "https://github.com/yttty/xutility"
requires-python = ">=3.12,<4.0"
dependencies = [
    "loguru (>=0.7.3,<0.8.0)",
    "numpy (>=2.3.3,<3.0.0)",
]
include = ["LICENSE"]


[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "pytest-asyncio (>=1.2.0,<2.0.0)",
    "black (>=25.9.0,<26.0.0)",
    "mypy (>=1.18.2,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
